duck/test/fail/duplicate_datatype.duck
import base
data Bool of { True ; False }
